--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/latihan_stream
+spring.datasource.url=jdbc:mysql://localhost:3306/test_java
 spring.datasource.username=root
-spring.datasource.password=Audy110501
+spring.datasource.password=Ivan2102
